--- a/TodoList/TodoList.csproj
+++ b/TodoList/TodoList.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Blazorise.Bootstrap" Version="0.9.1.2" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.1.2" />
     <PackageReference Include="bootstrap" Version="4.5.2" />
+    <PackageReference Include="Dapper" Version="2.0.90" />
   </ItemGroup>
 
   <ItemGroup>
