--- a/TodoList/appsettings.json
+++ b/TodoList/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "TodoList": "Data Source=FUZZBOX\\SQLEXPRESS;Initial Catalog=TodoList;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "TodoList": "Data Source=DESKTOP-0OKLPKI\\SQLEXPRESS;Initial Catalog=TodoList;Integrated Security=True"
   }
 }
